Operations-System/k8s/k8s-in-action/5.Services/5.4-Exposing-Services-Externally-Through-Ingress/5.4.3-Exposing-multiple-services-through-same-ingress/kubia-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-service-1
spec:
  #type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
      #nodePort: 30123
  - name: https
    port: 443
    targetPort: https
      #nodePort: 30124
      #sessionAffinity: ClientIP
  selector:
    app: kubia-1
---
apiVersion: v1
kind: Service
metadata:
  name: kubia-service-2
spec:
  #type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
      #nodePort: 30123
  - name: https
    port: 443
    targetPort: https
      #nodePort: 30124
      #sessionAffinity: ClientIP
  selector:
    app: kubia-2
