Operations-System/k8s/k8s-in-action/5.Services/5.4-Exposing-Services-Externally-Through-Ingress/5.4.3-Exposing-multiple-services-through-same-ingress/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
spec:
  rules:
  - http:
      paths:
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: kubia-service-1
            port: 
              number: 80
      - path: /2
        pathType: Prefix
        backend:
          service:
            name: kubia-service-2
            port:
              number: 80
